# jobshop-gpu

./: .gitignore  .gitmodules  CMakeLists.txt  NeuralNetwork  README.md
data/: data_test.json  data_verification.py  jobshop_data.json  sliwa1.json  weights_and_biases.json  weights_and_biases_192.json
data/OLD/: learn_3k_and_test_best_weights.csv  rnd_JT(5)_J(15)_M(5)_JO(5-10)_O(20)_OM(1-3)_learn.json  test_100.json  validate_13k.json  weights_and_biases_test.json
data/RESULTS/rnd_JT(10)_J(15)_M(5)_JO(5-10)_O(20)_OM(1-3)/: best_test_result.csv  best_train_makespans.csv  best_val_makespans.csv  best_weights.csv
data/RESULTS/rnd_JT(10)_J(15)_M(5)_JO(5-10)_O(20)_OM(1-3) copy/: best_test_result.csv  best_train_makespans.csv  best_val_makespans.csv
data/RESULTS/rnd_JT(10)_J(15)_M(5)_JO(5-10)_O(20)_OM(2-5)/: best_test_result.csv  best_train_makespans.csv  best_val_makespans.csv
data/TEST/: rnd_JT(10)_J(15)_M(5)_JO(10-15)_O(20)_OM(1-3)_test.json  rnd_JT(10)_J(30)_M(15)_JO(5-10)_O(20)_OM(1-3)_test.json  rnd_JT(10)_J(30)_M(15)_JO(5-10)_O(20)_OM(2-5)_test.json  rnd_JT(10)_J(30)_M(5)_JO(5-10)_O(20)_OM(1-3)_test.json  rnd_JT(5)_J(15)_M(15)_JO(10-15)_O(20)_OM(1-3)_test.json  rnd_JT(5)_J(15)_M(15)_JO(10-15)_O(20)_OM(2-5)_test.json  rnd_JT(5)_J(15)_M(15)_JO(5-10)_O(20)_OM(1-3)_test.json  rnd_JT(5)_J(15)_M(15)_JO(5-10)_O(20)_OM(2-5)_test.json  rnd_JT(5)_J(15)_M(5)_JO(10-15)_O(20)_OM(1-3)_test.json  rnd_JT(5)_J(15)_M(5)_JO(10-15)_O(20)_OM(2-5)_test.json  rnd_JT(5)_J(15)_M(5)_JO(5-10)_O(20)_OM(1-3)_test.json  rnd_JT(5)_J(30)_M(15)_JO(5-10)_O(20)_OM(1-3)_test.json  rnd_JT(5)_J(30)_M(15)_JO(5-10)_O(20)_OM(2-5)_test.json  rnd_JT(5)_J(30)_M(5)_JO(10-15)_O(20)_OM(1-3)_test.json  rnd_JT(5)_J(30)_M(5)_JO(10-15)_O(20)_OM(2-5)_test.json  rnd_JT(5)_J(30)_M(5)_JO(5-10)_O(20)_OM(1-3)_test.json  rnd_JT(5)_J(30)_M(5)_JO(5-10)_O(20)_OM(2-5)_test.json
data/job_shob_test_data/: rnd_JT(10)_J(15)_M(15)_JO(10-15)_O(20)_OM(1-3)_test.json  rnd_JT(10)_J(15)_M(15)_JO(10-15)_O(20)_OM(2-5)_test.json  rnd_JT(10)_J(15)_M(15)_JO(5-10)_O(20)_OM(1-3)_test.json  rnd_JT(10)_J(15)_M(15)_JO(5-10)_O(20)_OM(2-5)_test.json  rnd_JT(10)_J(15)_M(5)_JO(10-15)_O(20)_OM(2-5)_test.json  rnd_JT(10)_J(15)_M(5)_JO(5-10)_O(20)_OM(1-3)_test.json  rnd_JT(10)_J(15)_M(5)_JO(5-10)_O(20)_OM(2-5)_test.json  rnd_JT(10)_J(30)_M(15)_JO(10-15)_O(20)_OM(1-3)_test.json  rnd_JT(10)_J(30)_M(15)_JO(10-15)_O(20)_OM(2-5)_test.json  rnd_JT(10)_J(30)_M(5)_JO(10-15)_O(20)_OM(1-3)_test.json  rnd_JT(10)_J(30)_M(5)_JO(10-15)_O(20)_OM(2-5)_test.json  rnd_JT(10)_J(30)_M(5)_JO(5-10)_O(20)_OM(2-5)_test.json  rnd_JT(5)_J(15)_M(5)_JO(5-10)_O(20)_OM(2-5)_test.json  rnd_JT(5)_J(30)_M(15)_JO(10-15)_O(20)_OM(1-3)_test.json  rnd_JT(5)_J(30)_M(15)_JO(10-15)_O(20)_OM(2-5)_test.json
reports/: report1.nsys-rep  report10.nsys-rep  report11.nsys-rep  report12.nsys-rep  report13.nsys-rep  report14.nsys-rep  report16.nsys-rep  report17.nsys-rep  report2.nsys-rep  report3.nsys-rep  report4.nsys-rep  report5.nsys-rep  report6.nsys-rep  report7.nsys-rep  report8.nsys-rep  report9.nsys-rep
src/: FileManager.h  JobShopData.cu  JobShopData.cuh  JobShopData.h  JobShopGPUEvaluator.cu  JobShopGPUEvaluator.cuh  JobShopGPUEvaluator.h  JobShopHeuristic.cpp  JobShopHeuristic.cu  JobShopHeuristic.cuh  JobShopHeuristic.h  NeuralNetwork  NeuralNetwork.cu  NeuralNetwork.cuh  NeuralNetwork.h  customCMAES.hpp  fjssp  main.cpp  main.cu  main_cmaes.cpp  main_cmaes.cu  main_cmaes.cuh  neuralNetwork.cu  plotter.py  test.cu
